--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="banner-title">Brand New
                     Group of Architects</h1>
                 <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour,  words which don't
+                    majority have suffered alteration in some form, by injected humour, words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
@@ -43,23 +43,55 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h3 class="section-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our </span><span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="section-title"> <span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our
+                    </span><span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
-                </div>
+            </div>
             </div>
         </section>
         <!-- features will enjoy  -->
         <section>
-           
+
         </section>
         <!-- some facts  -->
-         <section class="some-facts">
+        <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-
-
-         </section>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
+                <div class="facts-container">
+                    <div class="fact-card display-flex">
+                       <div>
+                        <img src="images/icons/ribon.png" alt="">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                       </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                       <div>
+                        <img src="images/icons/projects.png" alt="">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                       </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                        <div>
+                            <img src="images/icons/customers.png" alt="">
+                            <h4 class="fact-number">590</h4>
+                            <h5 class="fact-name">Clients Worked</h5>
+                        </div>
+                    </div>
+                    <div class="fact-card display-flex">
+                        <div>
+                            <img src="images/icons/email.png" alt="">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                        </div>
+                    </div>
+                </div>
+        </section>
     </main>
     <footer>
 
