added sponsor section

--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
             </div>
             </div>
         </section>
-        <!-- features will enjoy  -->
-        <section>
-
-        </section>
         <!-- some facts  -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
@@ -92,6 +88,22 @@
                     </div>
                 </div>
         </section>
+     <!-- some facts -->
+      <section class="our-sponsors">
+        <div class="sponsors-info">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, quae. Porro id rem accusamus fugiat.</p>
+        </div>
+        <div class="sponsor-companies">
+            <img src="images/sponsors/spotify.png" alt="">
+            <img src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/telerama.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+            
+        </div>
+
+      </section>
     </main>
     <footer>
 
