--- a/index.html
+++ b/index.html
@@ -52,6 +52,41 @@
             </div>
             </div>
         </section>
+        <!-- fratures section start  -->
+         <section class="features display-flex">
+            <div class="">
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & some</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi a et vitae voluptate neque, dolor sed dolorem facilis optio? Ipsum, voluptatum inventore sapiente sunt harum corrupti illum quaerat totam repellendus.</p>
+
+                <!-- frature card container  -->
+                 <div class="feature-card">
+                    <h4 class="frature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, odio repudiandae velit soluta fugiat porro? Culpa repellendus veritatis pariatur explicabo officia deleniti, hic doloribus sequi. Quasi nesciunt eius molestiae!</p> 
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="frature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, odio repudiandae velit soluta fugiat porro? Culpa repellendus veritatis pariatur explicabo officia deleniti, hic doloribus sequi. Quasi nesciunt eius molestiae!</p> 
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="frature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, odio repudiandae velit soluta fugiat porro? Culpa repellendus veritatis pariatur explicabo officia deleniti, hic doloribus sequi. Quasi nesciunt eius molestiae!</p> 
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="frature-title">Desktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatibus, odio repudiandae velit soluta fugiat porro? Culpa repellendus veritatis pariatur explicabo officia deleniti, hic doloribus sequi. Quasi nesciunt eius molestiae!</p> 
+                 </div>
+
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Year</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+
+         </section>
         <!-- some facts  -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
